k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: "false"
  labels:
    app: movie-library-app
    app.kubernetes.io/component: movie-library-app
    app.kubernetes.io/instance: movie-library-app
    app.kubernetes.io/name: movie-library-app
    app.kubernetes.io/part-of: movie-library
    app.openshift.io/runtime: quarkus
  name: movie-library-app
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: movie-library-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: movie-library-app
        deployment: movie-library-app
      annotations:
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
      - env:
        - name: QUARKUS_PROFILE
          value: openshift-cluster
        image: quay.io/gtavares_pessoal/movie-library-app:1.0.0
        imagePullPolicy: IfNotPresent
        name: movie-library-app
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        resources: {}
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /q/health/ready
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            scheme: HTTP
            path: /q/health/live
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
