k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
    discovery.3scale.net/scheme: http
    discovery.3scale.net/port: '8080'
  labels:
    app: movie-library-app
    discovery.3scale.net: 'true'
    app.kubernetes.io/component: movie-library-app
    app.kubernetes.io/instance: movie-library-app
    app.kubernetes.io/name: movie-library-app
    app.kubernetes.io/part-of: movie-library
    app.openshift.io/runtime-version: 1.0.0
  name: movie-library-app
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: movie-library-app
    deployment: movie-library-app
  sessionAffinity: None
  type: ClusterIP
