k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: movie-library-app
    app.kubernetes.io/component: movie-library-app
    app.kubernetes.io/instance: movie-library-app
    app.kubernetes.io/name: movie-library-app
    app.kubernetes.io/part-of: movie-library
    app.openshift.io/runtime-version: 1.0.0
  name: movie-library-app
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: movie-library-app
    weight: 100
  wildcardPolicy: None
